public interface Animal extends Organism, Meat {
}



