public interface Carnivore {
    void eat(Meat meat);
}
