public interface Herbivore {
    void eat(Plant plant);
}
