public interface Omnivore extends Herbivore, Carnivore {
}
