public interface Organism {
}
