public interface Plant extends Organism{
}
