public interface Talking {
    void talk(Word word);
}
